# bitalisys

./: .gitignore  Cargo.toml
src/: main.rs  output.rs
src/processors/: addresses.rs  counter.rs  mod.rs  satoshis.rs
src/processors/onesteps/: blocks.rs  coinbases.rs  days_destroyed.rs  fees.rs  inputs.rs  mod.rs  outputs.rs  transactions.rs  volume.rs
src/utils/: date.rs  group.rs  mod.rs
