[package]
name = "bitalisys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = "1.2.19"
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
itertools = "0.10.5"
rayon = "1.7.0"
serde = "1.0.160"
serde_json = "1.0.96"
